objects/Schedule_Template__c.object
<CustomObject>
    <fields>
        <fullName>Color__c</fullName>
        <description>Hex # that represents the color of the template</description>
        <label>Color</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time_Text__c</fullName>
        <label>End Time Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Class__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Class?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Periods__c</fullName>
        <label>Number of Periods</label>
        <summaryForeignKey>Period__c.Schedule_Template__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Period</label>
        <referenceTo>Time_Element__c</referenceTo>
        <relationshipLabel>Schedule Templates</relationshipLabel>
        <relationshipName>Schedule_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Setup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Setup</label>
        <referenceTo>Setup__c</referenceTo>
        <relationshipLabel>Schedule Templates</relationshipLabel>
        <relationshipName>Schedule_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Split_School__c</fullName>
        <formula>Setup__r.School__r.Split_School__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Time_Text__c</fullName>
        <label>Start Time Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Schedule Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Setup__c</columns>
        <columns>Reporting_Period__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Mercersburg</fullName>
        <columns>NAME</columns>
        <columns>Reporting_Period__c</columns>
        <columns>Setup__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Setup__c</field>
            <operation>equals</operation>
            <value>S-563</value>
        </filters>
        <label>Mercersburg</label>
    </listViews>
    <nameField>
        <label>Schedule Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>