objects/Schedule_Template__c/fields/Schedule_template_18_digit_id__c.field-meta.xml
<CustomField>
    <fullName>Schedule_template_18_digit_id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule template 18 digit id</label>
    <type>Text</type>
</CustomField>