objects/Schedule_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Setup__c</columns>
    <columns>Reporting_Period__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>