objects/Schedule_Template__c/listViews/Mercersburg.listView-meta.xml
<ListView>
    <fullName>Mercersburg</fullName>
    <columns>NAME</columns>
    <columns>Reporting_Period__c</columns>
    <columns>Setup__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Setup__c</field>
        <operation>equals</operation>
        <value>S-563</value>
    </filters>
    <label>Mercersburg</label>
</ListView>